--- a/spring-i18n-to-javascript/pom.xml
+++ b/spring-i18n-to-javascript/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>jooq-meta</artifactId>
             <version>3.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
