--- a/spring-i18n-converter/pom.xml
+++ b/spring-i18n-converter/pom.xml
@@ -6,17 +6,17 @@
 
     <parent>
         <groupId>org.tinywind</groupId>
-        <artifactId>spring-i18n-to-javascript-parent</artifactId>
+        <artifactId>spring-i18n-converter-parent</artifactId>
         <version>0.1</version>
     </parent>
 
-    <artifactId>spring-i18n-to-javascript</artifactId>
-    <name>SPRING-I18N-TO-JAVASCRIPT</name>
+    <artifactId>spring-i18n-converter</artifactId>
+    <name>SPRING-I18N-CONVERTER</name>
 
     <licenses>
         <license>
             <name>The MIT License (MIT)</name>
-            <url>https://raw.githubusercontent.com/tinywind/SPRING-I18N-TO-JAVASCRIPT/master/LICENSE.txt</url>
+            <url>https://raw.githubusercontent.com/tinywind/SPRING-I18N-CONVERTER/master/LICENSE.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -31,6 +31,16 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.14</version>
         </dependency>
     </dependencies>
 
@@ -105,9 +115,9 @@
                             <schemaDirectory>src/main/resources/xsd</schemaDirectory>
                             <bindingDirectory>src/main/resources/xjb</bindingDirectory>
                             <schemaIncludes>
-                                <include>spring-i18n-to-javascript-0.1.xsd</include>
+                                <include>spring-i18n-converter-0.1.xsd</include>
                             </schemaIncludes>
-                            <generatePackage>org.tinywind.springi18ntojavascript.jaxb</generatePackage>
+                            <generatePackage>org.tinywind.springi18nconverter.jaxb</generatePackage>
                             <args>
                                 <arg>-Xxew</arg>
                                 <arg>-Xxew:instantiate lazy</arg>
