--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,39 @@
         <developerConnection>https://github.com/tinywind/SPRING-I18N-CONVERTER.git</developerConnection>
         <url>https://github.com/tinywind/SPRING-I18N-CONVERTER.git</url>
         <connection>git://github.com/tinywind/SPRING-I18N-CONVERTER.git</connection>
+        <tag>HEAD</tag>
     </scm>
+
+    <developers>
+        <developer>
+            <id>tinywind</id>
+            <name>Jeon JaeHyeong</name>
+            <email>tinywind0@gmail.com</email>
+            <url>http://www.tinywind.org</url>
+        </developer>
+    </developers>
 
     <issueManagement>
         <system>GitHub</system>
         <url>https://github.com/tinywind/SPRING-I18N-CONVERTER/issues</url>
     </issueManagement>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
@@ -51,6 +78,11 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
@@ -110,47 +142,22 @@
     <profiles>
         <profile>
             <id>default</id>
-            <properties>
-                <java.version>1.8</java.version>
-            </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
         </profile>
-
         <profile>
             <id>release</id>
-            <properties>
-                <java.version>1.8</java.version>
-            </properties>
             <build>
                 <plugins>
-                    <!-- This is required by Maven Central -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.1</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
                     <plugin>
                         <inherited>true</inherited>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>2.1.2</version>
+                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
+                                <phase>package</phase>
                                 <goals>
-                                    <goal>jar</goal>
+                                    <goal>jar-no-fork</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -159,12 +166,11 @@
                             <useDefaultExcludes>true</useDefaultExcludes>
                         </configuration>
                     </plugin>
-
                     <plugin>
                         <inherited>true</inherited>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>2.7</version>
+                        <version>2.9.1</version>
                         <executions>
                             <execution>
                                 <id>bundle-sources</id>
@@ -180,6 +186,25 @@
                             <show>protected</show>
                             <notree>true</notree>
                             <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <gpgArguments>
+                                <!--<argument>&#45;&#45;no-tty</argument>-->
+                            </gpgArguments>
                         </configuration>
                     </plugin>
                 </plugins>
