--- a/spring-i18n-converter-maven/pom.xml
+++ b/spring-i18n-converter-maven/pom.xml
@@ -17,7 +17,7 @@
     <licenses>
         <license>
             <name>The MIT License (MIT)</name>
-            <url>https://raw.githubusercontent.com/tinywind/SPRING-I18N-CONVERTER/master/LICENSE.txt</url>
+            <url>https://raw.githubusercontent.com/tinywind/SPRING-I18N-CONVERTER/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
